# pysteps

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CITATION.bib  CONTRIBUTING.rst  CONTRIBUTORS.rst  LICENSE  MANIFEST.in  PKG-INFO  README.md  README.rst  __init__.py  bandit.yaml  environment.yml  environment_dev.yml  environment_test.yml  importers.py  main.py  pyproject.toml  pystepsrc  readthedocs.yml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test.nc  test_io_knmi_hdf5.py  tox.ini
.github/: dependabot.yml
.github/workflows/: black.yml  check_black.yml  execute_tutorial_notebooks_in_external_repo.yml  main.yml  python-publish.yml  render_example_gallery.yml  test.yml  test_pysteps.yml  trigger_examples_rendering_in_external_repo.yml  validate_requirements.yml
advection/: interface.py  semilagrangian.py
cascade/: bandpass_filters.py
ci/: ci_test_env.yml  fetch_pysteps_data.py  run_tests.sh  test_plugin_support.py
conda_recipe/: README.rst  meta.yaml
config/: __init__.py  datasource_bom.py  datasource_fmi.py  datasource_mch.py  datasource_opera.py  interface.py  pysteps_config.py
doc/: .gitignore  Makefile  conf.py  environment.yml  make.bat  pysteps.advection.rst  pysteps.noise.rst  pysteps.postproc.rst  pysteps.visualization.rst  rebuild_docs.sh  requirements.txt
doc/_static/: pysteps.css
doc/_templates/: layout.html
doc/source/: advection.rst  cascade.rst  conf.py  doc_utils.py  extrapolation.rst  index.rst  io.rst  modules.rst  motion.rst  noise.rst  nowcasting.rst  nowcasts.rst  oflow.rst  postprocessing.rst  pysteps.cascade.rst  pysteps.io.rst  pysteps.nowcasts.rst  pysteps.optflow.rst  pysteps.rst  pysteps.timeseries.rst  pysteps.utils.rst  pysteps.verification.rst  references.bib  timeseries.rst  utils.rst  verification.rst  visualization.rst  zz_bibliography.rst
examples/: LK_buffer_mask.py  README.md  README.txt  advection_correction.py  anvil_nowcast.py  blended_forecast.py  cascade_decomposition.py  data_transformations.py  datasource_template.cfg  ens_kalman_filter_blended_forecast.py  ens_kalman_filter_blending.py  ensemble_verification.py  linda_nowcasts.py  my_first_nowcast.ipynb  my_first_nowcast.py  my_first_nowcast_pystepsv1.ipynb  my_first_nowcast_with_pysteps.py  noise_generators.py  opt_number_frames_OF.ipynb  optical_flow_methods_convergence.py  optical_flow_methods_performance.py  plot_cascade_decomposition.py  plot_custom_precipitation_range.py  plot_ensemble_verification.py  plot_extrapolation_nowcast.py  plot_linda_nowcast.py  plot_linear_blending.py  plot_noise_generators.py  plot_optical_flow.py  plot_optical_flow_with_new_inca_motion.py  plot_steps_nowcast.py  probability_forecast.py  rainfarm_downscale.py  read_netcdf.py  run_deterministic_nowcast.py  run_ensemble_nowcast.py  steps_blended_forecast.py  t_dating_extensive.py  test_decomposition_NWP.py  test_steps_blending_rmi.py  (+5 more)
io/: __init__.py  archive.py  importers.py  interface.py  utils.py
noise/: fftgenerators.py  interface.py  motion.py
nowcasts/: __init__.py  interface.py  simple_advection.py  steps.py
optflow/: darts.py  lucaskanade.py
postprocessing/: probmatching.py
pysteps/: __init__.py  accessors.py  converters.py  dataset.py  datasets.py  decorators.py  exceptions.py  pystepsrc  pystepsrc_schema.json  xarray_decorators.py  xarray_helpers.py
pysteps/advection/: interface.py  semilagrangian.py
pysteps/blending/: __init__.py  clim.py  ens_kalman_filter_methods.py  interface.py  linear_blending.py  pca_enkf.py  pca_ens_kalman_filter.py  skill_scores.py  steps.py  utils.py
pysteps/cascade/: __init__.py  bandpass_filters.py  decomposition.py  interface.py
pysteps/combination/: __init__.py  ensemble_kalman_filter.py  interface.py  masked_enkf.py
pysteps/detection/: blob.py
pysteps/downscaling/: __init__.py  interface.py  rainfarm.py
pysteps/extrapolation/: __init__.py  eulerian_persistence.py  interface.py  semilagrangian.py
pysteps/feature/: __init__.py  blob.py  interface.py  shitomasi.py  tstorm.py
scripts/: README.md  create_pystepsrc_tox.py  generate_requirements.py  read_the_docs.py  read_the_docs.sh  travis.py
tmp/: NWP_skill_today.pkl
tutorials/: README.md  data_paths.py  datasource_bom.cfg  datasource_fmi.cfg  datasource_mch.cfg  tutorial1_deterministic_nwc.py  tutorial1_motion.py  tutorial2_ensemble_nwc.py  tutorial3_verification.py  tutorial_noise_generation.py  tutorials.cfg
verification/: detcontscores.py
visualization/: motionfields.py  precipfields.py  utils.py
(+278 files in other folders)
